# ROS_MDD

./: .gitignore  build.xml  buildDistribution.xml
.mps/: .name  externalDependencies.xml  libraries.xml  migration.xml  modules.xml
languages/ROSML/: ROSML.mpl
languages/ROSML.sandbox/: ROSML.sandbox.msd
languages/ROSML.sandbox/models/: ROSML.sandbox.mps
languages/ROSML.sandbox/source_gen.caches/: deps.cp
languages/ROSML.sandbox/source_gen.caches/ROSML/sandbox/: dependencies  generated
languages/ROSML.sandbox/source_gen/ROSML/sandbox/: trace.info
languages/ROSML.sandbox/source_gen/ROSML/sandbox/pr/: CMakeLists.txt  package.xml
languages/ROSML.sandbox/source_gen/ROSML/sandbox/pr/action/: Mensaje.action
languages/ROSML.sandbox/source_gen/ROSML/sandbox/pr/src/: n.cpp  s.cpp
languages/ROSML.sandbox/source_gen/ROSML/sandbox/proyecto/: CMakeLists.txt  package.xml
languages/ROSML.sandbox/source_gen/ROSML/sandbox/proyecto/src/: nodo.cpp  server.cpp
languages/ROSML.sandbox/source_gen/ROSML/sandbox/proyecto/srv/: Mensaje.srv
languages/ROSML/generator/source_gen.caches/: deps.cp
languages/ROSML/generator/templates/: ROSML.generator.templates@generator.mps
languages/ROSML/models/: ROSML.actions.mps  ROSML.behavior.mps  ROSML.constraints.mps  ROSML.editor.mps  ROSML.intentions.mps  ROSML.structure.mps  ROSML.textGen.mps  ROSML.typesystem.mps
languages/ROSML/source_gen.caches/: deps.cp
languages/ROSML/source_gen.caches/ROSML/: generated
languages/ROSML/source_gen.caches/ROSML/actions/: generated
languages/ROSML/source_gen.caches/ROSML/behavior/: dependencies  generated
languages/ROSML/source_gen.caches/ROSML/constraints/: dependencies  generated
languages/ROSML/source_gen.caches/ROSML/dataFlow/: generated
languages/ROSML/source_gen.caches/ROSML/editor/: dependencies  generated
languages/ROSML/source_gen.caches/ROSML/intentions/: generated
languages/ROSML/source_gen.caches/ROSML/structure/: generated
languages/ROSML/source_gen.caches/ROSML/textGen/: generated
languages/ROSML/source_gen.caches/ROSML/typesystem/: generated
languages/ROSML/source_gen/ROSML/: Language.java  trace.info
languages/ROSML/source_gen/ROSML/behavior/: BehaviorAspectDescriptor.java  DirectConnection__BehaviorDescriptor.java  IInterface__BehaviorDescriptor.java  PortConnection__BehaviorDescriptor.java  Server__BehaviorDescriptor.java  Servidor__BehaviorDescriptor.java  trace.info
languages/ROSML/source_gen/ROSML/constraints/: ConstraintsAspectDescriptor.java  aspectcps-descriptorclasses.mps  trace.info
languages/ROSML/source_gen/ROSML/dataFlow/: DataFlowAspectDescriptorImpl.java  aspectcps-beforebaselang.mps  aspectcps-descriptorclasses.mps  trace.info
languages/ROSML/source_gen/ROSML/editor/: ActionInterface_Editor.java  ActionInterface_EditorBuilder_a.java  ConexionPuerto_Editor.java  ConexionPuerto_EditorBuilder_a.java  Conexion_Grafica_Editor.java  Conexion_Grafica_EditorBuilder_a.java  CustomInterface_Editor.java  CustomInterface_EditorBuilder_a.java  DataInterface_Editor.java  DataInterface_EditorBuilder_a.java  Dependency_Editor.java  Dependency_EditorBuilder_a.java  DirectConnection_Editor.java  DirectConnection_EditorBuilder_a.java  DirectConnection_Grafica_Editor.java  DirectConnection_Grafica_EditorBuilder_a.java  EditorAspectDescriptorImpl.java  IInterface_Editor.java  IInterface_EditorBuilder_a.java  Node_Editor.java  Node_EditorBuilder_a.java  Node_Grafica_Editor.java  Node_Grafica_EditorBuilder_a.java  Nodo_Textual.java  (+32 more)
solutions/ROSMDD.build/: ROSMDD.build.msd
solutions/ROSMDD.build/models/: ROSMDD.build.mps
solutions/ROSMDD.build0/: ROSMDD.build.msd
solutions/ROSMDD.build0/models/: ROSMDD.build.mps
solutions/ROSMDDPluginSolution/: ROSMDDPluginSolution.msd
solutions/ROSMDDPluginSolution/models/: ROSMDDPluginSolution.plugin.mps
(+20 files in other folders)
