<?xml version="1.0"?>
<package format="3">

  <!-- Package metadata -->
  <name>proyecto</name>
  <version>0.1.0</version>
  <description>Template for Package.xml</description>
  <maintainer email="admin@example.com"></maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>

  <!-- General dependencies for users -->
  <depend>rclcpp</depend>
<depend>std_msgs</depend>

  <!-- Custom interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
